eHOSP first commit

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test</title>
+	<title>eHOSP - Hospital on the cloud</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>This is a test</h1>
-	<p>This is the first test for my project's configuration</p>
+	<h1>Welcome to eHOSP</h1>
+	<ul>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Doc</a></li>
+		<li><a href="#">Contact</a></li>
+	</ul>
 
 </body>
 </html>
