Added LOGO to website

--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<img src="media/img/LOGO_big.png">
 	<h1>Welcome to eHOSP</h1>
+
 	<ul>
 		<li><a href="#">About</a></li>
 		<li><a href="#">Doc</a></li>
 		<li><a href="#">Contact</a></li>
 	</ul>
+
+	<p>
+		Welcome to eHOSP, the hospital on the cloud,
+		a platform for e-health and e-medicine!
+	</p>
 
 </body>
 </html>
