--- a/src/about.html
+++ b/src/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>eHOSP - Hospital on the cloud</title>
+	<title>eHOSP - About</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/header.css">
 </head>
@@ -9,7 +9,7 @@
 	<div w3-include-HTML="includes/html/header.html"></div>
 	<script src="js/w3-include-HTML.js"></script>
 
-	<h1>Welcome to eHOSP</h1>
+	<h1>About eHOSP</h1>
 
 	<p>
 		Welcome to eHOSP, the hospital on the cloud,
