--- a/src/contact.html
+++ b/src/contact.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="en">
 <head>
 	<title>eHOSP - Contact</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/header.css">
+
+	<link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/custom.css" />
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
+
+    <script src="js/vendor/modernizr.js"></script>
+    <script src="js/vendor/jquery.js"></script>
+    <script src="js/script.js"></script>
+    <script src="http://jquery-ui.googlecode.com/svn/tags/latest/ui/jquery.effects.core.js"></script>
+    <script src="http://jquery-ui.googlecode.com/svn/tags/latest/ui/jquery.effects.slide.js"></script>
 </head>
 <body>
-	<div w3-include-HTML="includes/html/header.html"></div>
-	<script src="js/w3-include-HTML.js"></script>
+	<div id="container">
+		<div w3-include-HTML="includes/html/header.html"></div>
+		<script src="js/w3-include-HTML.js"></script>
 
-	<h1>Contact us</h1>
+		<div class="row">
+	        <h1>Contact us</h1>
+	        <p>
+				Welcome to eHOSP, the hospital on the cloud,
+				a platform for e-health and e-medicine!
+			</p>
+      	</div> 
+	</div>
 
-	<p>
-		Welcome to eHOSP, the hospital on the cloud,
-		a platform for e-health and e-medicine!
-	</p>
+	<script src="js/foundation.min.js"></script>
+    <script>
+    	$(document).foundation();
+    </script>
 
+    <script type="text/javascript" src="js/dynamic.js"></script>
 </body>
 </html>
