Added buttons and services.html page

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,16 @@
 				Welcome to eHOSP, the hospital on the cloud,
 				a platform for e-health and e-medicine!
 			</p>
+			<p>
+				Click below to get started
+			</p>
+			<p>
+				<a href="services.html">
+					<button type="button" class="services">
+						Get Started
+					</button>
+				</a>
+			</p>
       	</div> 
 	</div>
 
