--- a/src/services.html
+++ b/src/services.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-	<title>eHOSP - Contact</title>
+	<title>eHOSP - Hospital on the cloud</title>
 
 	<meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/custom.css" />
@@ -22,11 +24,43 @@
 		<script src="js/w3-include-HTML.js"></script>
 
 		<div class="row">
-	        <h1>Contact us</h1>
-	        <p>
-				Welcome to eHOSP, the hospital on the cloud,
-				a platform for e-health and e-medicine!
-			</p>
+	        <h1>
+	        	eHOSP Services
+	        </h1>
+	        <table style="width: 100%">
+			  <tr>
+			    <td>
+			    	<a href="services.html">
+						<button type="button" class="services">
+							Service 1
+						</button>
+					</a>
+			    </td>
+			    <td>
+			    	<a href="services.html">
+						<button type="button" class="services">
+							Service 2
+						</button>
+					</a>
+			    </td>		
+			  </tr>
+			  <tr>
+			    <td>
+			    	<a href="services.html">
+						<button type="button" class="services">
+							Service 3
+						</button>
+					</a>
+			    </td>
+			    <td>
+			    	<a href="services.html">
+						<button type="button" class="services">
+							Service 4
+						</button>
+					</a>
+			    </td>	
+			  </tr>
+			</table>
       	</div> 
 	</div>
 
