--- a/src/sign.html
+++ b/src/sign.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/sign.css">
 
 	<link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/custom.css" />
@@ -24,21 +25,21 @@
 		<script src="js/w3-include-HTML.js"></script>
 
 		<div class="row">
-	        <h1> Welcome to eHOSP</h1>
-	        <p>
-				Welcome to eHOSP, the hospital on the cloud,
-				a platform for e-health and e-medicine!
-			</p>
-			<p>
-				Click below to get started
-			</p>
-			<p>
-				<a href="sign.html">
-					<button type="button" class="services">
-						Get Started
-					</button>
-				</a>
-			</p>
+	        <h1> Sign in or Create an account</h1>
+
+	        <section>
+				<form action="sign.php">
+					<ul class="input-list style-1 clearfix">
+						<li>
+							<input type="text" placeholder="Username">
+						</li>
+						<li>
+							<input type="text" placeholder="Password">
+						</li>
+					</ul>
+				</form>
+			</section>
+
       	</div> 
 	</div>
 
