Fixed side navigation for mobile viewports. It still needs work.

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
 </head>
 <body>
 	<div id="container">
-		<div w3-include-HTML="includes/html/header.html"></div>
-		<script src="js/w3-include-HTML.js"></script>
+        <div w3-include-HTML="includes/html/header.html"></div>
+        <script src="js/w3-include-HTML.js"></script>
 
-		<div class="row">
+		<div>
 	        <h1> Welcome to eHOSP</h1>
 	        <p>
 				Welcome to eHOSP, the hospital on the cloud,
