--- a/src/sign.html
+++ b/src/sign.html
@@ -24,7 +24,7 @@
 		<div w3-include-HTML="includes/html/header.html"></div>
 		<script src="js/w3-include-HTML.js"></script>
 
-		<div class="row">
+		<div>
 	        <h1> Sign in or Create an account</h1>
 
 	        <section>
@@ -34,13 +34,13 @@
 							<input type="text" placeholder="Username">
 						</li>
 						<li>
-							<input type="text" placeholder="Password">
+							<input type="password" placeholder="Password">
 						</li>
 					</ul>
 				</form>
 			</section>
 
-      	</div> 
+      	</div>
 	</div>
 
 	<script src="js/foundation.min.js"></script>
